add wishlist app

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -454,5 +454,35 @@
       "copy_code_success": "Code copied successfully",
       "print_gift_card": "Print"
     }
+  },
+  "app_wishlist-king": {
+    "general": {
+      "wishlist": "Wishlist",
+      "wishlist_empty_note": "Your wishlist is empty",
+      "add_to_wishlist": "Add to Wishlist",
+      "remove_from_wishlist": "Remove from Wishlist",
+      "clear_wishlist": "Clear Wishlist",
+      "in_wishlist": "In Wishlist",
+      "share_wishlist": "Share Wishlist",
+      "copy_share_link": "Copy Link",
+      "share_link_copied": "Link Copied",
+      "share_by_email_body": "Here is the link to my list:",
+      "share_list_title": "My Wishlist",
+      "share_list_description": "Check out some of my favorite things from {{ shopName }}.",
+      "login_or_signup_note_html": "To save your wishlist please <a href='{{ login_url }}'>login</a> or <a href='{{ register_url }}'>sign up</a>.",
+      "add_to_cart": "Add to Cart",
+      "sold_out": "Sold Out",
+      "quantity": "Quantity",
+      "view_product": "View product",
+      "view_wishlist": "View Wishlist",
+      "share_on_facebook": "Share on Facebook",
+      "share_on_twitter": "Share on Twitter",
+      "share_on_pinterest": "Share on Pinterest",
+      "share_with_whatsapp": "Share with WhatsApp",
+      "share_by_email": "Share with Email",
+      "get_link": "Get link",
+      "send_to_customer_service": "Send to customer service",
+      "add_all_to_cart": "Add wishlist to cart"
+    }
   }
 }
